12739
Aladdin: *[http://scala-webapps.epfl.ch/bugtracking/bugs/displayItem.do?id=1203 bug 1203]*

{code}
case class ant(t: String) extends Annotation
object AnnTest {
   def main(args: Array[String]): Unit = {
     val a: @ant("12") scala.xml.NodeSeq = Nil
     println(a)
   }
}
{code}

leads to:

{{	
AnnTest.scala:5: error: type mismatch;
  found   : Nil.type (with underlying type object Nil)
  required: @ant("12") scala.xml.NodeSeq
     val a: @ant("12") scala.xml.NodeSeq = Nil
                                           ^
{code}

The implicit conversion from lists to NodeSeq's should be found. It is found if -Xplugtypes is not turned on.
